Add contact section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+    scroll-behavior: smooth;
+}
+
 .navbar-container header.scrolled {
     background-color: #121416;
     box-shadow: 0 8px 8px 0 rgba( 195, 194, 146, 0.37 );
